<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <POU Name="CONVEYOR" Id="{48213daa-4593-4040-b304-e1f3bd94f996}">
    <Declaration><![CDATA[PROGRAM CONVEYOR

VAR
	JIG_ST1: JIG;
	JIG_ST2: JIG;
	JIG_ST3: JIG;
	JIG_ST4: JIG;
	JIG_ST5: JIG;
	JIG_ST6: JIG;
	JIG_ST7: JIG;
	JIG_ST8: JIG;
	JIG_ST9: JIG;

	PULSE_RELEASE_JIG_OP1:TP;
	PULSE_RELEASE_JIG_OP2: TP;
	
	TEST_RELEASE :BOOL;

END_VAR
VAR_INPUT
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(**********************************
*
* Gestion des posages Opérateur 1 et 2
*
********************************************)
IF (GEMMA.STEP='F1' OR GEMMA.STEP='F4') THEN

	(*Gestion des posages opérateur*)
	PULSE_RELEASE_JIG_OP1(IN:=(ST10_OPERATEUR1_START AND ST10_10B1) OR FLAGS.DEBUG_OPERATOR, PT:= PULSE_RELEASE_JIG_OP );
	PULSE_RELEASE_JIG_OP2(IN:=(ST10_OPERATEUR2_START AND ST10_10B2) OR FLAGS.DEBUG_OPERATOR, PT:= PULSE_RELEASE_JIG_OP );
	
	ST10_10V1:= NOT PULSE_RELEASE_JIG_OP1.Q ;
	ST10_10V2:= NOT PULSE_RELEASE_JIG_OP2.Q ;
	
	(*Activation du bon posage en fonction du débit*)
	IF ST4_5_JIG_DISABLED THEN	
		ST4_JIG_DISABLED := TRUE;
		ST5_JIG_DISABLED := TRUE;
	ELSE	
		IF PUMP_PARAMS.GEN_GRAND_DEBIT THEN
			ST4_JIG_DISABLED := TRUE;
			ST5_JIG_DISABLED := FALSE;
		ELSE
			ST4_JIG_DISABLED := FALSE;
			ST5_JIG_DISABLED := TRUE;
		END_IF
	END_IF;

END_IF;


(**********************************
*
* Gestion des posages principaux
*
********************************************)
JIG_ST1(
	CARRIER_PRESENT:=ST1_1B2 ,
	CARRIER_WAIT_PRESENT:=ST1_1B1 ,
	RELEASE_CARRIER:= FLAGS.ST1_RELEASE_CARRIER OR TEST_RELEASE,
	JIG_DISABLED:= ST1_JIG_DISABLED,
	STATUS=> FLAGS.ST1_JIG_STATUS,
	NEXT_JIG_STATUS:=JIG_ST2.STATUS,
	CYLINDER_WAIT=> ST1_1V1,
	CYLINDER_STOP=> ST1_1V3,
	CYLINDER_LOCK=> ST1_1V2);
JIG_ST2(
	CARRIER_PRESENT:=ST2_2B2 ,
	CARRIER_WAIT_PRESENT:=ST2_2B1 ,
	RELEASE_CARRIER:= FLAGS.ST2_RELEASE_CARRIER OR TEST_RELEASE,
	JIG_DISABLED:= ST2_JIG_DISABLED,
	STATUS=> FLAGS.ST2_JIG_STATUS,
	NEXT_JIG_STATUS:=JIG_ST3.STATUS,
	CYLINDER_WAIT=> ST2_2V1,
	CYLINDER_STOP=> ST2_2V3,
	CYLINDER_LOCK=> ST2_2V2);
JIG_ST3(
	CARRIER_PRESENT:=ST3_3B2 ,
	CARRIER_WAIT_PRESENT:=ST3_3B1 ,
	RELEASE_CARRIER:= FLAGS.ST3_RELEASE_CARRIER OR TEST_RELEASE,
	JIG_DISABLED:= ST3_JIG_DISABLED,
	STATUS=> FLAGS.ST3_JIG_STATUS,
	NEXT_JIG_STATUS:=JIG_ST4.STATUS,
	CYLINDER_WAIT=> ST3_3V1,
	CYLINDER_STOP=> ST3_3V3,
	CYLINDER_LOCK=> ST3_3V2);
JIG_ST4(
	CARRIER_PRESENT:=ST4_4B2 ,
	CARRIER_WAIT_PRESENT:=ST4_4B1 ,
	RELEASE_CARRIER:= FLAGS.ST4_RELEASE_CARRIER OR TEST_RELEASE,
	JIG_DISABLED:= ST4_JIG_DISABLED,
	STATUS=> FLAGS.ST4_JIG_STATUS,
	NEXT_JIG_STATUS:=JIG_ST5.STATUS,
	CYLINDER_WAIT=> ST4_4V1,
	CYLINDER_STOP=> ST4_4V3,
	CYLINDER_LOCK=> ST4_4V2);
JIG_ST5(
	CARRIER_PRESENT:=ST5_5B2 ,
	CARRIER_WAIT_PRESENT:=ST5_5B1 ,
	RELEASE_CARRIER:= FLAGS.ST5_RELEASE_CARRIER OR TEST_RELEASE,
	JIG_DISABLED:= ST5_JIG_DISABLED,
	STATUS=> FLAGS.ST5_JIG_STATUS,
	NEXT_JIG_STATUS:=JIG_ST6.STATUS,
	CYLINDER_WAIT=> ST5_5V1,
	CYLINDER_STOP=> ST5_5V3,
	CYLINDER_LOCK=> ST5_5V2);
JIG_ST6(
	CARRIER_PRESENT:=ST6_6B2 ,
	CARRIER_WAIT_PRESENT:=ST6_6B1 ,
	RELEASE_CARRIER:= FLAGS.ST6_RELEASE_CARRIER OR TEST_RELEASE,
	JIG_DISABLED:= ST6_JIG_DISABLED,
	STATUS=> FLAGS.ST6_JIG_STATUS,
	NEXT_JIG_STATUS:=JIG_ST7.STATUS,
	CYLINDER_WAIT=> ST6_6V1,
	CYLINDER_STOP=> ST6_6V3,
	CYLINDER_LOCK=> ST6_6V2);
JIG_ST7(
	CARRIER_PRESENT:=ST7_7B2 ,
	CARRIER_WAIT_PRESENT:=ST7_7B1 ,
	RELEASE_CARRIER:= FLAGS.ST7_RELEASE_CARRIER OR TEST_RELEASE,
	JIG_DISABLED:= ST7_JIG_DISABLED,
	STATUS=> FLAGS.ST7_JIG_STATUS,
	NEXT_JIG_STATUS:=JIG_ST8.STATUS,
	CYLINDER_WAIT=> ST7_7V1,
	CYLINDER_STOP=> ST7_7V3,
	CYLINDER_LOCK=> ST7_7V2);
JIG_ST8(
	CARRIER_PRESENT:=ST8_8B2 ,
	CARRIER_WAIT_PRESENT:=ST8_8B1 ,
	RELEASE_CARRIER:= FLAGS.ST8_RELEASE_CARRIER OR TEST_RELEASE,
	JIG_DISABLED:= ST8_JIG_DISABLED,
	STATUS=> FLAGS.ST8_JIG_STATUS,
	NEXT_JIG_STATUS:=JIG_ST9.STATUS,
	CYLINDER_WAIT=> ST8_8V1,
	CYLINDER_STOP=> ST8_8V3,
	CYLINDER_LOCK=> ST8_8V2);	
JIG_ST9(
	CARRIER_PRESENT:=ST9_9B2 ,
	CARRIER_WAIT_PRESENT:=ST9_9B1 ,
	RELEASE_CARRIER:= FLAGS.ST9_RELEASE_CARRIER OR TEST_RELEASE,
	JIG_DISABLED:= ST9_JIG_DISABLED,
	STATUS=> FLAGS.ST9_JIG_STATUS,
	NEXT_JIG_STATUS:=FALSE,
	CYLINDER_WAIT=> ST9_9V1,
	CYLINDER_STOP=> ST9_9V3,
	CYLINDER_LOCK=> ST9_9V2);


]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>